<resources>
    <string name="app_name">TWAIN Direct Sample</string>
    <string name="action_settings">Settings</string>
    <string name="scanner_picker">Scanner Picker</string>
    <string name="no_scanner_selected_tap_to_select">No scanner selected\nTap to select a scanner</string>
    <string name="no_task_selected_tap_to_select">No task selected\nTap to select a task</string>
    <string name="task_generator_url">https://www.dynamsoft.com/Demo/TwainDirectTaskGeneratorOnline/Basic.html</string>
    <string name="select_task_chooser_title">Select Task File (*.tdt)</string>
    <string name="invalid_json_colon">Invalid JSON:</string>
    <string name="unable_to_open_file">Not a valid task</string>
    <string name="ok">OK</string>
    <string name="no_session">no active session</string>
    <string name="searching_for_scanners">Searching for scanners</string>
    <string name="dismiss">Dismiss</string>
    <string name="detected_status">Detected status: %s</string>
    <string name="saved_name">Saved %1$s</string>
    <string name="title_activity_file_list">File List</string>
    <string name="image_folder_name">TWAIN Direct Images</string>
    <string name="title">Title</string>
    <string name="details">Details</string>
    <string name="selected_scanner_colon">Selected Scanner:</string>
    <string name="no_scanner_selected_message">No scanner selected Tap to select a scanner</string>
    <string name="selected_task_colon">Selected Task:</string>
    <string name="no_task_selected_message">No task selected Tap to select a task</string>
    <string name="task_hint">(A task is a JSON text file)</string>
    <string name="online_task_generator">Online Task Generator</string>
    <string name="start_button_label">Start</string>
    <string name="pause_button_label">Pause</string>
    <string name="stop_button_label">Stop</string>
    <string name="scanned_images_result">Scanned images are in \'TWAIN Direct Images\'</string>
    <string name="show_images_button">Show Images</string>
    <string name="scanners">Scanners</string>
    <string name="delete_all_images">Delete All Images</string>
    <string name="local_or_cloud">Select whether you\'d like to use a local scanner or a TWAIN Cloud scanner</string>
    <string name="cloud">Cloud</string>
    <string name="local">Local</string>
    <string name="title_activity_select_cloud_scanner">Select Cloud Scanner</string>
    <string name="login_with_google">Login with Google</string>
    <string name="twain_cloud_api_url">TWAIN Cloud API URL</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="https_twain_hazybits_com_api">https://twain.hazybits.com/api/</string>
    <string name="title_activity_cloud_discover">Discovered Cloud URLs</string>
    <string name="cloud_discover">Discover Cloud URL</string>
</resources>
